--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.16.1",
-    "antd": "^4.24.2",
+    "antd": "^5.0.0",
     "axios": "^1.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -24,6 +24,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "less": "^4.1.3",
     "vite": "^3.2.3"
   }
 }
