--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.16.1",
+    "@uiw/react-md-editor": "^3.19.7",
     "antd": "^5.0.0",
     "axios": "^1.1.3",
     "localforage": "^1.10.0",
